# src/controllers/user.controller.js
@@ -1,43 +1,33 @@
 import { response } from '../../config/response.js';
 import { status } from '../../config/response.status.js';
 import { StatusCodes } from "http-status-codes";
-import { joinUser, checkingNick, loginUser, findUser} from './../services/user.service.js';
+import { joinUser, checkingNick, checkingEmail, loginUser, findUser} from './../services/user.service.js';
 
 export const userSignin = async (req, res, next) => {
     const signIn = req.body;
-    console.log("회원가입을 요청하였습니다!");
-    console.log("body:", signIn); // 값이 잘 들어오는지 테스트
-
-    const signInData = await joinUser(req.body);
-    console.log("signIndata: ", signInData);
+    console.log("회원 가입을 요청하였습니다.");
+    const signInMessage = await joinUser(signIn);
     
-    if(signInData == -1){
-        console.log("아이디가 중복 됩니다.");
-        return res.status(StatusCodes.BAD_REQUEST).json({
-            message: "중복된 이메일입니다.",
-          }); 
-    } else {
-        console.log("회원 가입 성공");
-        return res.status(StatusCodes.OK).json({
-            message: "회원가입 성공",
-        });
-    }
+    console.log("회원 가입 성공");
+    return res.status(StatusCodes.OK).json(signInMessage)
+}
+
+export const checkEmail = async (req, res, next) => {
+    const email = req.body.email;
+    console.log("이메일 중복 확인을 요청하였습니다.");
+    const checkingEmailMessage = await checkingEmail(email);
+    
+    console.log("사용 가능한 이메일입니다.");
+    return res.status(StatusCodes.OK).json(checkingEmailMessage);
 }
 
 export const checkNick = async (req, res, next) => {
     const nickname = req.body.nickname;
-
-    const nicknameData = await checkingNick(nickname);
+    console.log("닉네임 중복 확인을 요청하였습니다.");
+    const checkingNickMessage = await checkingNick(nickname);
     
-    if(nicknameData == -1){
-        console.log("닉네임이 중복 됩니다.");
-        return res.status(StatusCodes.BAD_REQUEST).json({
-            message: "중복된 닉네임입니다.",
-          }); 
-    } else {
-        console.log("사용 가능한 닉네임입니다.");
-        return res.status(StatusCodes.OK).send(nicknameData);
-    }
+    console.log("사용 가능한 닉네임입니다.");
+    return res.status(StatusCodes.OK).json(checkingNickMessage);
 }
 
 export const userLogin = async (req, res, next) => {
@@ -45,21 +35,12 @@ export const userLogin = async (req, res, next) => {
     console.log("로그인을 요청하였습니다!");
     const loginUserData = await loginUser(logIn);
 
-    if (loginUserData == -1) {
-        console.log("존재하지 않는 유저입니다");
-        return res.status(StatusCodes.MEMBER_NOT_FOUND).json({ message: "존재하지 않는 유저입니다" });
-    } 
-    else if((loginUserData == -2)){
-        console.log("비밀번호가 틀렸습니다.");
-        return res.status(StatusCodes.PARAMETER_IS_WRONG).json({ message: "비밀번호가 틀렸습니다." });
-    } 
-    else {
-        console.log("로그인에 성공하였습니다.");
-        return res.status(StatusCodes.OK).send(loginUserData);
-    }
+    console.log("로그인에 성공하였습니다.");
+    return res.status(StatusCodes.OK).json(loginUserData);
+    
 }
 
-export const findPass = async (req, res, next) => {
+export const userFindPass = async (req, res, next) => {
     const email = req.body.email;
     console.log("비밀 번호 찾기를 요청하였습니다!");
     const findUserData = await findUser(email);
