# src/models/user.dao.js
@@ -3,7 +3,7 @@
 import { pool } from "../../config/db.config.js";
 import { BaseError } from "../../config/error.js";
 import { status } from "../../config/response.status.js";
-import { confirmEmail, confirmPassword, confirmNick, insertUserSql, getUserData } from "./../models/user.sql.js";
+import { confirmEmail, confirmNick, getUserPassword, insertUserSql, getUserData, changeUserPassword, getUserId } from "./../models/user.sql.js";
 
 // DB에 유저 추가하기
 export const addUser = async (data) => {
@@ -22,7 +22,7 @@ export const addUser = async (data) => {
 
 // 유저 정보 가져오기
 export const getUser = async (userId) => {
-    try {
+   try {
         const conn = await pool.getConnection();
         const [user] = await pool.query(getUserData, userId);
 
@@ -31,7 +31,6 @@ export const getUser = async (userId) => {
         }
 
         conn.release();
-        console.log(user);
         return user;
         
      } catch (err) {
@@ -40,17 +39,17 @@ export const getUser = async (userId) => {
 }
 
 // 유저 정보 수정하기
-export const updateUser = async (userId) => {
+export const updateUserPassword = async (userId) => {
     try {
         const conn = await pool.getConnection();
-        const [user] = await pool.query(updateUserData, userId);
+        const [user] = await pool.query(changeUserPassword, userId);
 
         if(user.length == 0){
             return false;
         }
 
         conn.release();
-        return user;
+        return true;
         
      } catch (err) {
         throw new BaseError(status.PARAMETER_IS_WRONG);
@@ -58,13 +57,13 @@ export const updateUser = async (userId) => {
 }
 
 // 이메일 중복되는 지 확인
-export const existEmail = async (data) => {
+export const existEmail = async (email) => {
     try{
         const conn = await pool.getConnection();
         
-        const [confirm] = await pool.query(confirmEmail, data.email);
+        const [confirm] = await pool.query(confirmEmail, email);
         
-        if(confirm[0].isExistEmail == 0){
+        if(confirm[0].isExistEmail){
             conn.release();
             return false;
         }
@@ -106,10 +105,25 @@ export const confirmPassword = async (data) => {
         conn.release();
 
         if(password[0].password != data.password)
-            return -2;
+            return false;
         else {
-            return 1;
+            return password[0].password;
         }
+        
+    }catch (err) {
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+// 이메일로 유저 고유 번호 반환하기
+export const getUserIdFromEmail = async (email) => {
+    try{
+        const conn = await pool.getConnection();
+        
+        const [userId] = await pool.query(getUserId, email);
+        conn.release();
+
+        return userId[0].user_id;
         
     }catch (err) {
         throw new BaseError(status.PARAMETER_IS_WRONG);
